Fixes container alignment

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -174,7 +174,6 @@ a.league-link:hover {
   color: #00d37f;
 }
 
-
 .green {
   border: 2px solid green;
   color: blue;
@@ -191,17 +190,15 @@ a.league-link:hover {
 }
 
 .woso_words {
-
-  font-size: 2.5em;
+  font-size: 5px;
 }
 
 .woso_container {
   background-color: pink;
-  height: 3000px;
 }
 
 #bcd_blue {
- max-width: 100%;
+  max-width: 100%;
 }
 
 // .fifa-league-link {
